--- a/common/common.scss
+++ b/common/common.scss
@@ -263,6 +263,6 @@ tr.topic-list-item-separator {
     box-shadow: none;
     background-color: #F9FCFF;
 }
-tr.topic-list-item-separator td.topic-list-item-separator{
+tr.topic-list-item-separator td.topic-list-data{
     width: 100%
 }
