--- a/common/common.scss
+++ b/common/common.scss
@@ -111,16 +111,17 @@ html .background-container{
 .category-list .category-list-banner {
     justify-content: flex-start !important;
     align-items: flex-end !important;
-  &.category-6 {
+    &.category-4, &.category-6, &.category-18, &.category-3{
+        border-radius:  10px 10px 0px 0px !important;
+      }
+    &.category-6 {
     background-image: url();
-  }
-  &:after {
+    }
+    &:after {
     padding: 0 0 1rem 16px;
     color: #fff !important;
-  }
-  & .category-4, .category-6, .category-18, .category-3{
-    border-radius: 10px 10px 0px;
-  }
+    }
+
 }
 td.latest{
     padding-right: 10px !important;
