--- a/common/common.scss
+++ b/common/common.scss
@@ -108,6 +108,13 @@ html .background-container{
 .setting.category-list{
     display:block;
 }
+.category-list tbody tr:hover{
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: #feede6;
+    background-image: linear-gradient(12deg,#fff 50%,hsla(0,0%,100%,0));
+    transition: background-color .3s ease-in;
+}
 .category-list .category-list-banner {
     justify-content: flex-start !important;
     align-items: flex-end !important;
